Replace java 8 util Base64 with java 7 solution